example/secondfile/objects/User_Story__c.object
<CustomObject>
    <description>Collab</description>
    <fields>
        <fullName>Acceptance_Criteria__c</fullName>
        <label>Acceptance Criteria</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Business_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Business Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Dev_Lead__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dev Lead</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Feature__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Feature</label>
        <referenceTo>Release_Feature__c</referenceTo>
        <relationshipLabel>User Stories</relationshipLabel>
        <relationshipName>User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent User Story</label>
        <referenceTo>User_Story__c</referenceTo>
        <relationshipLabel>Children User Stories</relationshipLabel>
        <relationshipName>Children_User_Stories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rally_Link__c</fullName>
        <label>Rally Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Rally_User_Story_ID__c</fullName>
        <label>Rally User Story ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Scrum_Team__c</fullName>
        <label>Scrum Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Minions</fullName>
                </value>
                <value>
                    <fullName>Spartans</fullName>
                </value>
                <value>
                    <fullName>Titans</fullName>
                </value>
                <value>
                    <fullName>Ultimates</fullName>
                </value>
                <value>
                    <fullName>Digital Experience</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Project Requested</fullName>
                </value>
                <value>
                    <fullName>Approved to Proceed</fullName>
                </value>
                <value>
                    <fullName>Analysis</fullName>
                </value>
                <value>
                    <fullName>Development</fullName>
                </value>
                <value>
                    <fullName>Unit Testing</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>Ready for Release</fullName>
                </value>
                <value>
                    <fullName>Delpoyed to Prod</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Design Complete</fullName>
                </value>
                <value>
                    <fullName>Design Accepted</fullName>
                </value>
                <value>
                    <fullName>Developed</fullName>
                </value>
                <value>
                    <fullName>Demo Complete</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_stage__c</fullName>
        <label>Sub-stage</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Stage__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Gathering Requirements</fullName>
                </value>
                <value>
                    <fullName>POC Built</fullName>
                </value>
                <value>
                    <fullName>User Story Started</fullName>
                </value>
                <value>
                    <fullName>User Story Complete</fullName>
                </value>
                <value>
                    <fullName>Development Started</fullName>
                </value>
                <value>
                    <fullName>Development Complete</fullName>
                </value>
                <value>
                    <fullName>Unit Testing Started</fullName>
                </value>
                <value>
                    <fullName>Unit Testing Complete</fullName>
                </value>
                <value>
                    <fullName>Promoted to Dev Sandbox</fullName>
                </value>
                <value>
                    <fullName>Promoted to Test Sandbox</fullName>
                </value>
                <value>
                    <fullName>Promoted to UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Solution_Overview__c</fullName>
        <label>Technical Solution Overview</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Tester__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>User_Stories3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User_Story_Name__c</fullName>
        <label>User Story Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>User Story</label>
    <nameField>
        <label>User Story</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>User Stories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>